feature/PI-578-create_mhs_device Create MHS Device enpoint, without drd's
