# infrastructure/swagger/11_components--requestBodies.yaml
@@ -102,3 +102,25 @@ components:
               - name
           example:
             name: "Sample Device"
+    MessageHandlingSystemDeviceCreateRequestBody:
+      description: Request body to create a Message Handling System Device object
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              questionnaire_responses:
+                type: object
+                description: Questionnaire Responses for MHS Device
+                properties:
+                  spine_mhs:
+                    type: array
+                    description: spine_mhs questionnaire associated with the mhs device
+                    items:
+                      type: object
+                      description: spine_mhs questionnaire response
+            required:
+              - questionnaire_responses
+          example:
+            questionnaire_responses: { "spine_mhs": [{ "question": "answer" }] }
